# pramaana

./: .gitignore  README.md  pyproject.toml
completions/: _pramaana
scripts/: pramana
src/pramaana/: cli.py  core.py
src/pramaana/data/completions/: _pramaana  pramaana-completion.bash
